--- a/Cookies.css
+++ b/Cookies.css
@@ -13,9 +13,14 @@ p {
     padding: 0;
 }
 
+img {
+    padding: 0;
+    margin: 0;
+}
+
 .main-container {
     display: grid;
-    grid-template-columns: 2fr 3fr 1.3fr;
+    grid-template-columns: 20fr 15px 25fr 15px 15fr;
     height: 100vh;
 }
 
@@ -129,3 +134,37 @@ p {
     width: 200px;
 }
 
+.divider {
+    background-image: url('Images/woodTexture.png');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+}
+
+.divider-image {
+    object-fit: cover;
+    width: 100%;
+    height: 13px;
+}
+
+.divider-container {
+    height: 12px;
+}
+
+.gray-divider {
+    width: 100%;
+    height: 30px;
+    background-color: rgb(36, 36, 36);
+}
+
+.stats-button {
+    position: relative;
+}
+
+.sugar-lumps {
+    position: absolute;
+    bottom: -17px;
+    left: 0;
+}
