--- a/Cookies.css
+++ b/Cookies.css
@@ -6,7 +6,18 @@ body {
     width: 100vw;
     background-image: url('Images/Background.png');
     background-size: contain;
+    position: relative;
 }
+.change-name-container,
+.hover-container {
+    display: none;
+    position: absolute;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 p {
     margin: 0;
@@ -18,9 +29,14 @@ img {
     margin: 0;
 }
 
+button:focus,
+p:focus {
+    outline: none;
+}
+
 .main-container {
     display: grid;
-    grid-template-columns: 20fr 15px 25fr 15px 15fr;
+    grid-template-columns: 576px 15px 995px 15px 315px;
     height: 100vh;
 }
 
@@ -55,7 +71,6 @@ img {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 500px;
 }
 
 .stats-legacy-container {
@@ -83,13 +98,55 @@ img {
     margin-bottom: 10px;
 }
 
+.factory-name-cost-container {
+    gap: 0px;
+}
+
 .specific-factory {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 75px 125px 100px;
     align-items: center;
-    border: 2px solid black;
-    background-color: rgb(156, 155, 155);
+    background-image: url('Images/image.png');
+    background-size: cover;
+    background-repeat: no-repeat;
     cursor: pointer;
+    position: relative;
+}
+
+.hover-specific-factory {
+    width: 370px;
+    min-height: 190px;
+    height: auto;
+    background-image: url('Images/Background-pop-ups.png');
+    display: grid;
+    grid-template-columns: 50px 220fr 100px;
+    grid-template-rows: 50px 1fr 2fr;
+    align-items: center;
+    border-width: 4px;
+    border-style: solid;
+    border-left-color: rgb(148, 111, 80);
+    border-top-color: rgb(148, 111, 80);
+    border-right-color: rgb(100, 65, 36); 
+    border-bottom-color: rgb(100, 65, 36);
+    border-radius: 5px;
+    gap: 10px;
+    padding-top: 10px;
+}
+
+
+.shadow-box-surround:hover {
+    filter: brightness(1.2);
+}
+
+.shadow-box-surround:active {
+    filter:brightness(0.8)
+}
+
+.shadow-box-surround {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+    padding: 8px 0px 8px 8px;
+    background: linear-gradient(#8f8165, #504949);
+    transition: filter 0.2s; 
 }
 
 .factory-image {
@@ -99,6 +156,8 @@ img {
 .factory-cost {
     font-size: 19px;
     vertical-align: center;
+    color: #00ff00;
+    text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.5);
 }
 
 .factory-cost::before {
@@ -106,8 +165,9 @@ img {
     background-image: url('Images/Cookie.png');
     display: inline-block;
     vertical-align: middle;
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
+    padding-right: 6px;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -116,22 +176,37 @@ img {
 .factory-amount {
     display: flex;
     justify-content: flex-end;
-    padding-right: 30px;
-    font-size: 40px;
+    padding-right: 10px;
 }
 
 .factory-name {
-    font-size: 20px;
-    margin-bottom: 10px
+    font-size: 35px;
+    color: white;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.5);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
 }
 
 .cookie-click-button {
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .cookie-click-image {
     width: 200px;
+}
+
+.cookie-click-image:active {
+    width: 195px;   
+}
+
+.factory-name-cookies-cps-container{
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 50px;
 }
 
 .divider {
@@ -141,6 +216,7 @@ img {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.7);
 }
 
 .divider-image {
@@ -151,6 +227,7 @@ img {
 
 .divider-container {
     height: 12px;
+    box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.7);
 }
 
 .gray-divider {
@@ -167,4 +244,244 @@ img {
     position: absolute;
     bottom: -17px;
     left: 0;
+}
+
+.factory-amount-p {
+    color: rgb(101, 101, 101);
+    filter: opacity(0.6);
+    font-size: 50px;
+}
+
+.hover-specific-factory p {
+    color: rgb(186, 185, 185);
+    padding: 0px;
+    margin: 0px;
+}
+
+.hover-name-owned {
+    display: flex;
+    flex-direction: column;
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    justify-content: center;
+}
+
+.hover-specific-factory img {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    width: 40px;
+    height: 40px;
+    justify-self: center;
+    align-self: center;
+}
+
+.hover-cost {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+    justify-self: center;
+    padding-right: 15px;
+}
+
+.hover-lore {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    grid-column: 1 / 4; 
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 5px;
+    height: 100%;
+    width: 80%;
+    margin: 0 auto;
+    font-style: italic;
+}
+
+.hover-basic-information-specific-factory {
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 8px;
+    gap: 3px;
+}
+
+.hover-basic-information-specific-factory p:nth-last-child(-n+3) {
+    padding: 4px;
+    font-size: 11px;
+    text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.5);
+    background-color: rgb(101, 101, 101);
+    border: none;
+    border-radius: 20px;
+}
+
+.span-color {
+    font-weight: bold;
+    color: white;
+}
+
+.hover-name-factory {
+    font-size: 30px;
+}
+
+.hover-basic-information-specific-factory p:nth-last-child(-n+3)::before {
+    content: "●";
+    padding-right: 4px;
+    align-self: center;
+}
+
+.factory-username {
+    background-color: rgba(0, 0, 0, 0.25);
+    padding: 3px 70px;
+    border-radius: 10px;
+    color: rgb(197, 196, 196);
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    transition: color 0.1s;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.6);
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.factory-username:hover {
+    color: rgba(255, 255, 255, 0.9);
+    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.9);
+}
+
+.cookies-per-second,
+.total-cookies-baked {
+    background: none;
+    color: white;
+    border: none;
+    font-size: 20px;
+    transition: color 0.1s;
+    text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+    max-width: 120px;
+    text-align: center;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+}
+
+.cookies-per-second { 
+    font-size: 15px;
+}
+
+.total-baked-cps {
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 576px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 0px 2px ;
+}
+
+.change-name-wrap {
+    width: 268px;
+    height: 142px;
+    background-image: url('Images/Background-pop-ups.png');
+    border-bottom-color: rgb(145, 134, 57);
+    border-right-color: rgb(145, 134, 57);
+    border-left-color: rgb(202, 185, 78);
+    border-top-color: rgb(202, 185, 78);
+    border-width: 4px;
+    border-style: solid;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 3px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.change-name-buttons-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}
+
+.change-name-p1 {
+    color: rgb(221, 204, 110);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 0px;
+    margin: 0px;
+    text-shadow: 1px 1px 1px rgb(141, 130, 65);
+}
+
+.change-name-p1::before {
+    content: '';
+    background-image: url('Images/Icons/Wing-Left.png');
+    display: block;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 40px;
+    height: 25px;
+}
+
+.change-name-p1::after {
+    content: '';
+    background-image: url('Images/Icons/Wing-Right.png');
+    display: block;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 25px;
+}
+
+.bakery-name-p2 {
+    color: rgb(210, 210, 210);
+    border: 1px solid gray;
+    border-radius: 3px;
+    padding: 8px;
+    margin: 0px;
+    margin-top: 3px;
+}
+
+.name-input-open-up {
+    width: 234px;
+    border: 2px solid rgb(202, 185, 78);
+    border-bottom-color: rgb(145, 134, 57);
+    border-right-color: rgb(145, 134, 57);
+    border-radius: 3px;
+    outline: none;
+    text-align: center;
+}
+
+.input-box-container {
+    border: 1px solid gray;
+    padding: 5px;
+    border-radius: 3px;
+    margin-top: 3px;
+}
+
+.change-name-buttons-container {
+    margin-top: 3px;
+    display: flex;
+    gap: 5px;
+}
+
+.change-name-buttons-container button {
+    background-image: url('Images/Background-pop-ups.png');
+    border: 1px solid rgb(210, 193, 79);
+    border-bottom-color: rgb(102, 93, 23);
+    border-right-color: rgb(102, 93, 23);
+    color: white;
+    font-size: 12px;
+    border-radius: 2px;
+    transition: border 0.1s;
+    text-align: center;
+    cursor: pointer;
+    padding: 3px 8px;
+}
+
+.change-name-buttons-container button:hover {
+    border: 1px solid white;
 }
